# 8bit-synth

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPLETION.md  FEATURE-1-COMPLETE.md  FEATURE-ROADMAP.md  FEEDBACK-ARCHITECTURE-REFACTOR.md  FEEDBACK-FEATURE-1.md  FEEDBACK-PATTERN-LIBRARY.md  FEEDBACK-RANDOMIZATION.md  FEEDBACK-RESPONSE.md  FEEDBACK-UI-EVALUATION.md  LICENSE.md  PATTERN-LIBRARY-COMPLETE.md  PROMOTION-APPROVED.md  QUICKSTART.md  README.md  README_ORIGINAL.md  REALTIME-AUDIO-FEATURE.md  REFACTORING-COMPLETE.md  REFLECTION.md  SHIPPED.md  TASK-8bit-synth.md  TASK-FEATURE-ROADMAP.md  TASK-FIX-REALTIME-AUDIO.md  TASK-PATTERN-LIBRARY.md  TASK-UI-POLISH-FROM-TONY.md  TASK-UI-POLISH-POC.md  TASK-UI-SPECIALIST.md  UI-STYLE-GUIDE.md  build.sh  imgui.ini  setup_imgui.sh  test_synth
include/: AudioOutput.h  Effects.h  Envelope.h  FxParams.h  Oscillator.h  PatternLoader.h  PatternSerializer.h  Presets.h  RealTimeAudio.h  Sequencer.h  Song.h  SongEngine.h  SynthEngine.h  SynthParams.h  WavExporter.h
include/controller/: SequencerController.h  SongController.h  SynthController.h
include/model/: PatternFile.h  SynthModel.h  UserAction.h
include/view/: SequencerView.h  SongView.h  SynthTheme.h  SynthView.h
patterns/: BrentSignature.8bp  ClassicGame.8bp  DubBeat.8bp  basic_beat.txt  boss_battle.txt  breakbeat.txt  game_over.txt
src/: Effects.cpp  PatternSerializer.cpp  RealTimeAudio.cpp  main.mm
src/controller/: SequencerController.cpp  SongController.cpp  SynthController.cpp
src/view/: SequencerView.cpp  SongView.cpp  SynthView.cpp
tests/: test_synth.cpp
